--- a/_data/includes.yml
+++ b/_data/includes.yml
@@ -52,45 +52,46 @@ people: [people/adams.james.html, people/adelman.joshua.html, people/ahmadia.a.h
   people/joyce.blake.html, people/kelly.tom.html, people/kerr.j.html, people/khetani.radhika.html,
   people/kim.jan.html, people/king.wt.html, people/kiral-kornek.isabell.html, people/kitzes.j.html,
   people/koch.christina.html, people/koenig.steven.html, people/koeppel.alexander.html,
-  people/konrad.b.html, people/kwakwa.kwasi.html, people/lafleur.olivier.html, people/laforest-lapointe.isabelle.html,
-  people/lagesen.k.html, people/lake.sherry.html, people/lant.jeremiah.html, people/lasher.c.html,
-  people/latornell.d.html, people/laufersweiler.mark.html, people/lebauer.david.html,
-  people/lee.kate.html, people/lee.kwangchun.html, people/lee.luke.html, people/lehtomaki.joona.html,
-  people/levernier.jacob.html, people/leyder.jean-christophe.html, people/lightman.matthew.html,
-  people/lin.johnny.html, people/liu.gang.html, people/lonsdale.andrew.html, people/lowe.elijah.html,
-  people/luo.yuxi.html, people/macdonell.cam.html, people/macindoe.gary.html, people/maclean.dan.html,
-  people/madin.j.html, people/madison.cindee.html, people/mansour.tamer.html, people/martinez.paula.html,
-  people/marwaha.kunal.html, people/marwick.ben.html, people/masoud-ansari.sina.html,
-  people/mcdonald.daniel.html, people/mcgough.s.html, people/mcgoveran.catherine.html,
-  people/mckay.sheldon.html, people/mckellar.j.html, people/mckinley.maria.html, people/mclean.cameron.html,
-  people/mctavish.ej.html, people/metz.jeremy.html, people/michael.lauren.html, people/michnowicz.s.html,
-  people/michonneau.francois.html, people/middleton.ryan.html, people/miles.brian.html,
-  people/mills.b.html, people/miotto.amanda.html, people/mistry.meeta.html, people/mitchell.i.html,
-  people/mokhtarzadeh.hamid.html, people/moore.jason.html, people/morris.b.html, people/mudrak.erika.html,
-  people/munoz.ian.html, people/nagraj.vp.html, people/nahum.josh.html, people/nakhoul.hani.html,
-  people/navarro.francisco.html, people/nederbragt.l.html, people/nenadic.aleksandra.html,
-  people/nielsen.daiva.html, people/nielsen.jens.html, people/nunez-iglesias.juan.html,
-  people/ocais.alan.html, people/oleary.aaron.html, people/olson.r.html, people/ory.j.html,
-  people/palamartchouk.kirill.html, people/palm.francisco.html, people/paulo.martin.html,
-  people/pawlik.a.html, people/pearson.john.html, people/pell.j.html, people/perez-suarez.david.html,
-  people/perez.f.html, people/perignon.mariela.html, people/perry.adam.html, people/peru.giacomo.html,
-  people/petre.m.html, people/pfenninger.s.html, people/pinska.adrianna.html, people/pipitone.j.html,
-  people/plumbley.m.html, people/pollard.tom.html, people/pomorski.pawel.html, people/preeyanon.likit.html,
-  people/pritchard.leighton.html, people/provencher.francoise.html, people/pue.s.html,
-  people/ram.k.html, people/ramalingam.saravanan.html, people/ramos-musalem.ana-karina.html,
-  people/razoumov.alex.html, people/rice.timothy.html, people/richie-halford.adam.html,
-  people/riley.janet.html, people/rio.david.html, people/ritchie.scott.html, people/robinson.james.html,
-  people/robinson.natalie.html, people/robinson.rosario.html, people/rohl.andrew.html,
-  people/rokem.a.html, people/ross.noam.html, people/rowell.bill.html, people/rugis.john.html,
-  people/ruttley.m.html, people/sampath.ramesh.html, people/sane.maneesha.html, people/sarahan.michael.html,
-  people/schilling.martin.html, people/schloss.pat.html, people/schmidt.marian.html,
-  people/schossau.j.html, people/schwartz.rachel.html, people/scopatz.a.html, people/selik.m.html,
-  people/serra.neem.html, people/shambaugh.brent.html, people/sharan.malvika.html,
-  people/shelton.j.html, people/shelton.jennifer.html, people/sheneman.leigh.html,
-  people/sherman.jason.html, people/shih.yu-ching.html, people/silva.raniere.html,
-  people/simpkin.sarah.html, people/simpson.jack.html, people/simpson.john.html, people/slaybaugh.rachel.html,
-  people/sloggett.clare.html, people/small.luc.html, people/smith.byron.html, people/smith.daniel.html,
-  people/smith.j.html, people/smorul.mike.html, people/soderberg.courtney.html, people/soontiens.nancy.html,
+  people/konrad.b.html, people/kuzak.mateusz.html, people/kwakwa.kwasi.html, people/lafleur.olivier.html,
+  people/laforest-lapointe.isabelle.html, people/lagesen.k.html, people/lake.sherry.html,
+  people/lant.jeremiah.html, people/lasher.c.html, people/latornell.d.html, people/laufersweiler.mark.html,
+  people/lebauer.david.html, people/lee.kate.html, people/lee.kwangchun.html, people/lee.luke.html,
+  people/lehtomaki.joona.html, people/levernier.jacob.html, people/leyder.jean-christophe.html,
+  people/lightman.matthew.html, people/lin.johnny.html, people/liu.gang.html, people/lonsdale.andrew.html,
+  people/lowe.elijah.html, people/luo.yuxi.html, people/macdonell.cam.html, people/macindoe.gary.html,
+  people/maclean.dan.html, people/madin.j.html, people/madison.cindee.html, people/mansour.tamer.html,
+  people/martinez.paula.html, people/marwaha.kunal.html, people/marwick.ben.html,
+  people/masoud-ansari.sina.html, people/mcdonald.daniel.html, people/mcgough.s.html,
+  people/mcgoveran.catherine.html, people/mckay.sheldon.html, people/mckellar.j.html,
+  people/mckinley.maria.html, people/mclean.cameron.html, people/mctavish.ej.html,
+  people/metz.jeremy.html, people/michael.lauren.html, people/michnowicz.s.html, people/michonneau.francois.html,
+  people/middleton.ryan.html, people/miles.brian.html, people/mills.b.html, people/miotto.amanda.html,
+  people/mistry.meeta.html, people/mitchell.i.html, people/mokhtarzadeh.hamid.html,
+  people/moore.jason.html, people/morris.b.html, people/mudrak.erika.html, people/munoz.ian.html,
+  people/nagraj.vp.html, people/nahum.josh.html, people/nakhoul.hani.html, people/navarro.francisco.html,
+  people/nederbragt.l.html, people/nenadic.aleksandra.html, people/nielsen.daiva.html,
+  people/nielsen.jens.html, people/nunez-iglesias.juan.html, people/ocais.alan.html,
+  people/oleary.aaron.html, people/olson.r.html, people/ory.j.html, people/palamartchouk.kirill.html,
+  people/palm.francisco.html, people/paulo.martin.html, people/pawlik.a.html, people/pearson.john.html,
+  people/pell.j.html, people/perez-suarez.david.html, people/perez.f.html, people/perignon.mariela.html,
+  people/perry.adam.html, people/peru.giacomo.html, people/petre.m.html, people/pfenninger.s.html,
+  people/pinska.adrianna.html, people/pipitone.j.html, people/plumbley.m.html, people/pollard.tom.html,
+  people/pomorski.pawel.html, people/preeyanon.likit.html, people/pritchard.leighton.html,
+  people/provencher.francoise.html, people/pue.s.html, people/ram.k.html, people/ramalingam.saravanan.html,
+  people/ramos-musalem.ana-karina.html, people/razoumov.alex.html, people/rice.timothy.html,
+  people/richie-halford.adam.html, people/riley.janet.html, people/rio.david.html,
+  people/ritchie.scott.html, people/robinson.james.html, people/robinson.natalie.html,
+  people/robinson.rosario.html, people/rohl.andrew.html, people/rokem.a.html, people/ross.noam.html,
+  people/rowell.bill.html, people/rugis.john.html, people/ruttley.m.html, people/sampath.ramesh.html,
+  people/sane.maneesha.html, people/sarahan.michael.html, people/schilling.martin.html,
+  people/schloss.pat.html, people/schmidt.marian.html, people/schossau.j.html, people/schwartz.rachel.html,
+  people/scopatz.a.html, people/selik.m.html, people/serra.neem.html, people/shambaugh.brent.html,
+  people/sharan.malvika.html, people/shelton.j.html, people/shelton.jennifer.html,
+  people/sheneman.leigh.html, people/sherman.jason.html, people/shih.yu-ching.html,
+  people/silva.raniere.html, people/simpkin.sarah.html, people/simpson.jack.html,
+  people/simpson.john.html, people/slaybaugh.rachel.html, people/sloggett.clare.html,
+  people/small.luc.html, people/smith.byron.html, people/smith.daniel.html, people/smith.j.html,
+  people/smorul.mike.html, people/soderberg.courtney.html, people/soontiens.nancy.html,
   people/speer.donald.html, people/srinath.ashwin.html, people/srinivasan.karthik.html,
   people/st-onge.pier-luc.html, people/stacy.mark.html, people/standage.daniel.html,
   people/stanton-cook.mitchell.html, people/staton.margaret.html, people/steinbach.peter.html,
