Adding more trainers

--- a/_data/includes.yml
+++ b/_data/includes.yml
@@ -16,12 +16,12 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/canino-koning_r.html, people/cannam_c.html, people/caporaso_greg.html, people/cartwright_reed.html,
   people/cerino_t.html, people/chamberlain_s.html, people/chan_cliburn.html, people/charbonneau_amanda.html,
   people/chase_john.html, people/chen_daniel.html, people/chisholm_chelsea.html, people/cholia_s.html,
-  people/chuang-howe_a.html, people/chue-hong_n.html, people/chung_kathy.html, people/clayton_sophie.html,
-  people/code_w.html, people/coelho_luis.html, people/collings_ruth.html, people/collins_arliss.html,
-  people/collins_matthew.html, people/cordero_victor.html, people/corless_john.html,
-  people/corvellec_marianne.html, people/coudrat_thomas.html, people/cox_logan.html,
-  people/cozzini_s.html, people/cranston_k.html, people/crouch_nicholas.html, people/crouch_s.html,
-  people/croucher_mike.html, people/crusoe_michael.html, people/daigle_remi.html,
+  people/chuang-howe_a.html, people/chue-hong_n.html, people/chung_kathy.html, people/clayton_sarah.html,
+  people/clayton_sophie.html, people/code_w.html, people/coelho_luis.html, people/collings_ruth.html,
+  people/collins_arliss.html, people/collins_matthew.html, people/cordero_victor.html,
+  people/corless_john.html, people/corvellec_marianne.html, people/coudrat_thomas.html,
+  people/cox_logan.html, people/cozzini_s.html, people/cranston_k.html, people/crouch_nicholas.html,
+  people/crouch_s.html, people/croucher_mike.html, people/crusoe_michael.html, people/daigle_remi.html,
   people/dale_ryan.html, people/dashnow_harriet.html, people/davenport_e.html, people/davey_rob.html,
   people/davis_m.html, people/davis_neal.html, people/demichelis_raffaella.html, people/derrick_james.html,
   people/desjardins_james.html, people/devenyi_gabriel.html, people/devlin_catherine.html,
@@ -59,8 +59,9 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/levernier_jacob.html, people/leyder_jean-christophe.html, people/lightman_matthew.html,
   people/lin_johnny.html, people/liu_gang.html, people/lonsdale_andrew.html, people/lowe_elijah.html,
   people/luo_yuxi.html, people/macdonell_cam.html, people/macindoe_gary.html, people/maclean_dan.html,
-  people/madin_j.html, people/madison_cindee.html, people/mansour_tamer.html, people/martinez_paula.html,
-  people/marwaha_kunal.html, people/marwick_ben.html, people/masoud-ansari_sina.html,
+  people/madin_j.html, people/madison_cindee.html, people/manhaes-savio_alexandre.html,
+  people/mansour_tamer.html, people/martinez_paula.html, people/marwaha_kunal.html,
+  people/marwick_ben.html, people/mashchenko_sergey.html, people/masoud-ansari_sina.html,
   people/mcclatchy_sue.html, people/mcdonald_daniel.html, people/mcgough_s.html, people/mcgoveran_catherine.html,
   people/mckay_sheldon.html, people/mckellar_j.html, people/mckinley_maria.html, people/mclean_cameron.html,
   people/mctavish_ej.html, people/metz_jeremy.html, people/michael_lauren.html, people/michnowicz_s.html,
