one more place with a `.`

--- a/_data/includes.yml
+++ b/_data/includes.yml
@@ -52,7 +52,7 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/joyce_blake.html, people/kelly_tom.html, people/kerr_j.html, people/khetani_radhika.html,
   people/kim_jan.html, people/king_wt.html, people/kiral-kornek_isabell.html, people/kitzes_j.html,
   people/koch_christina.html, people/koenig_steven.html, people/koeppel_alexander.html,
-  people/konrad_b.html, people/kuzak.mateusz.html, people/kwakwa_kwasi.html, people/lafleur_olivier.html,
+  people/konrad_b.html, people/kuzak_mateusz.html, people/kwakwa_kwasi.html, people/lafleur_olivier.html,
   people/laforest-lapointe_isabelle.html, people/lagesen_k.html, people/lake_sherry.html,
   people/lant_jeremiah.html, people/lasher_c.html, people/latornell_d.html, people/laufersweiler_mark.html,
   people/lebauer_david.html, people/lee_kate.html, people/lee_kwangchun.html, people/lee_luke.html,
