Adding Lynn Young and Peter van Heusden

--- a/_data/includes.yml
+++ b/_data/includes.yml
@@ -13,13 +13,14 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/boyle_amy.html, people/bray_e.html, people/broman_karl.html, people/brown_amy.html,
   people/brown_ct.html, people/brown_kyler.html, people/bryan_j.html, people/burns_s.html,
   people/cabunoc_abigail.html, people/calhoun_patrick.html, people/camins-esakov_jared.html,
-  people/canino-koning_r.html, people/cannam_c.html, people/caporaso_greg.html, people/cartwright_reed.html,
-  people/cerino_t.html, people/chamberlain_s.html, people/chan_cliburn.html, people/charbonneau_amanda.html,
-  people/chase_john.html, people/chen_daniel.html, people/chisholm_chelsea.html, people/cholia_s.html,
-  people/chuang-howe_a.html, people/chue-hong_n.html, people/chung_kathy.html, people/clayton_sarah.html,
-  people/clayton_sophie.html, people/code_w.html, people/coelho_luis.html, people/collings_ruth.html,
-  people/collins_arliss.html, people/collins_matthew.html, people/cordero_victor.html,
-  people/corless_john.html, people/corvellec_marianne.html, people/coudrat_thomas.html,
+  people/canino-koning_r.html, people/cannam_c.html, people/capes_gerard.html, people/caporaso_greg.html,
+  people/cartwright_reed.html, people/cerino_t.html, people/chamberlain_s.html, people/chan_cliburn.html,
+  people/charbonneau_amanda.html, people/chase_john.html, people/chen_daniel.html,
+  people/chisholm_chelsea.html, people/cholia_s.html, people/chuang-howe_a.html, people/chue-hong_n.html,
+  people/chung_kathy.html, people/clayton_sarah.html, people/clayton_sophie.html,
+  people/code_w.html, people/coelho_luis.html, people/collings_ruth.html, people/collins_arliss.html,
+  people/collins_matthew.html, people/cordero_victor.html, people/corless_john.html,
+  people/corvellec_marianne.html, people/coudrat_thomas.html, people/cox_grace.html,
   people/cox_logan.html, people/cozzini_s.html, people/cranston_k.html, people/crouch_nicholas.html,
   people/crouch_s.html, people/croucher_mike.html, people/crusoe_michael.html, people/daigle_remi.html,
   people/dale_ryan.html, people/dashnow_harriet.html, people/davenport_e.html, people/davey_rob.html,
@@ -45,14 +46,15 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/henderson_donna.html, people/henry_ian.html, people/herr_joshua.html, people/hertweck_kate.html,
   people/hetherington_james.html, people/hiebert_james.html, people/hinchliff_cody.html,
   people/hinsen_k.html, people/hjelm_johan.html, people/hocking_daniel.html, people/hodge_amy.html,
-  people/holdgraf_c.html, people/hollister_jeff.html, people/huang_daisie.html, people/huff_k.html,
-  people/imamoglu_fatma.html, people/irving_d.html, people/ivanov_p.html, people/jackson_m.html,
-  people/jacobs_christian.html, people/jarecka_dorota.html, people/jedrzejewski-szmek_zbigniew.html,
-  people/johnson_ben.html, people/johnston_luke.html, people/jones_dm.html, people/jones_martin.html,
-  people/joyce_blake.html, people/kelly_tom.html, people/kerr_j.html, people/khetani_radhika.html,
-  people/kim_jan.html, people/king_wt.html, people/kiral-kornek_isabell.html, people/kitzes_j.html,
-  people/koch_christina.html, people/koenig_steven.html, people/koeppel_alexander.html,
-  people/konrad_b.html, people/kuzak_mateusz.html, people/kwakwa_kwasi.html, people/lafleur_olivier.html,
+  people/hodges_toby.html, people/holdgraf_c.html, people/hollister_jeff.html, people/huang_daisie.html,
+  people/huff_k.html, people/imamoglu_fatma.html, people/irving_d.html, people/ivanov_p.html,
+  people/jackson_m.html, people/jacobs_christian.html, people/jarecka_dorota.html,
+  people/jedrzejewski-szmek_zbigniew.html, people/johnson_ben.html, people/johnston_luke.html,
+  people/jones_dm.html, people/jones_martin.html, people/joyce_blake.html, people/kelly_tom.html,
+  people/kerr_j.html, people/khetani_radhika.html, people/kim_jan.html, people/king_wt.html,
+  people/kiral-kornek_isabell.html, people/kitzes_j.html, people/koch_christina.html,
+  people/koenig_steven.html, people/koeppel_alexander.html, people/konrad_b.html,
+  people/kuzak_mateusz.html, people/kwakwa_kwasi.html, people/lafleur_olivier.html,
   people/laforest-lapointe_isabelle.html, people/lagesen_k.html, people/lake_sherry.html,
   people/lant_jeremiah.html, people/lasher_c.html, people/latornell_d.html, people/laufersweiler_mark.html,
   people/lebauer_david.html, people/lee_kate.html, people/lee_kwangchun.html, people/lee_luke.html,
@@ -71,39 +73,41 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/munoz_ian.html, people/nagraj_vp.html, people/nahum_josh.html, people/nakhoul_hani.html,
   people/navarro_francisco.html, people/nederbragt_l.html, people/nenadic_aleksandra.html,
   people/nielsen_daiva.html, people/nielsen_jens.html, people/nunez-iglesias_juan.html,
-  people/ocais_alan.html, people/oleary_aaron.html, people/olson_r.html, people/ory_j.html,
-  people/palamartchouk_kirill.html, people/palm_francisco.html, people/paulo_martin.html,
-  people/pawlik_a.html, people/pearson_john.html, people/pell_j.html, people/perez-suarez_david.html,
-  people/perez_f.html, people/perignon_mariela.html, people/perry_adam.html, people/peru_giacomo.html,
-  people/petre_m.html, people/pfenninger_s.html, people/pinska_adrianna.html, people/pipitone_j.html,
-  people/plumbley_m.html, people/pollard_tom.html, people/pomorski_pawel.html, people/preeyanon_likit.html,
-  people/pritchard_leighton.html, people/provencher_francoise.html, people/pue_s.html,
-  people/ram_k.html, people/ramalingam_saravanan.html, people/ramos-musalem_ana-karina.html,
-  people/razoumov_alex.html, people/rice_timothy.html, people/richie-halford_adam.html,
-  people/riley_janet.html, people/rio_david.html, people/ritchie_scott.html, people/robinson_james.html,
-  people/robinson_natalie.html, people/robinson_rosario.html, people/rohl_andrew.html,
-  people/rokem_a.html, people/ross_noam.html, people/rowell_bill.html, people/rugis_john.html,
-  people/ruttley_m.html, people/sampath_ramesh.html, people/sane_maneesha.html, people/sarahan_michael.html,
-  people/schilling_martin.html, people/schloss_pat.html, people/schmidt_marian.html,
-  people/schossau_j.html, people/schwartz_rachel.html, people/scopatz_a.html, people/selik_m.html,
-  people/serra_neem.html, people/shambaugh_brent.html, people/sharan_malvika.html,
-  people/shelton_j.html, people/shelton_jennifer.html, people/sheneman_leigh.html,
-  people/sherman_jason.html, people/shih_yu-ching.html, people/silva_raniere.html,
-  people/simpkin_sarah.html, people/simpson_jack.html, people/simpson_john.html, people/slaybaugh_rachel.html,
-  people/sloggett_clare.html, people/small_luc.html, people/smith_byron.html, people/smith_daniel.html,
-  people/smith_j.html, people/smorul_mike.html, people/soderberg_courtney.html, people/soontiens_nancy.html,
+  people/ocais_alan.html, people/oleary_aaron.html, people/olson_r.html, people/orendt_anita.html,
+  people/ory_j.html, people/palamartchouk_kirill.html, people/palm_francisco.html,
+  people/paulo_martin.html, people/pawlik_a.html, people/pearson_john.html, people/pell_j.html,
+  people/perez-suarez_david.html, people/perez_f.html, people/perignon_mariela.html,
+  people/perry_adam.html, people/peru_giacomo.html, people/petre_m.html, people/pfenninger_s.html,
+  people/pinska_adrianna.html, people/pipitone_j.html, people/plumbley_m.html, people/pollard_tom.html,
+  people/pomorski_pawel.html, people/preeyanon_likit.html, people/pritchard_leighton.html,
+  people/provencher_francoise.html, people/pue_s.html, people/ram_k.html, people/ramalingam_saravanan.html,
+  people/ramos-musalem_ana-karina.html, people/razoumov_alex.html, people/rice_timothy.html,
+  people/richie-halford_adam.html, people/riley_janet.html, people/rio_david.html,
+  people/ritchie_scott.html, people/robinson_james.html, people/robinson_natalie.html,
+  people/robinson_rosario.html, people/rohl_andrew.html, people/rokem_a.html, people/ross_noam.html,
+  people/rowell_bill.html, people/rugis_john.html, people/ruttley_m.html, people/sampath_ramesh.html,
+  people/sane_maneesha.html, people/sarahan_michael.html, people/schilling_martin.html,
+  people/schloss_pat.html, people/schmidt_marian.html, people/schossau_j.html, people/schwartz_rachel.html,
+  people/scopatz_a.html, people/selik_m.html, people/serra_neem.html, people/shambaugh_brent.html,
+  people/sharan_malvika.html, people/shelton_j.html, people/shelton_jennifer.html,
+  people/sheneman_leigh.html, people/sherman_jason.html, people/shih_yu-ching.html,
+  people/silva_raniere.html, people/simpkin_sarah.html, people/simpson_jack.html,
+  people/simpson_john.html, people/slaybaugh_rachel.html, people/sloggett_clare.html,
+  people/small_luc.html, people/smith_byron.html, people/smith_daniel.html, people/smith_j.html,
+  people/smorul_mike.html, people/soderberg_courtney.html, people/soontiens_nancy.html,
   people/speer_donald.html, people/srinath_ashwin.html, people/srinivasan_karthik.html,
   people/st-onge_pier-luc.html, people/stacy_mark.html, people/standage_daniel.html,
   people/stanton-cook_mitchell.html, people/staton_margaret.html, people/steinbach_peter.html,
-  people/stevens_sarah.html, people/stillwell_mark.html, people/strootman_jonathan.html,
-  people/sumner_mike.html, people/sundaram_arvind.html, people/supp_s.html, people/svaksha.html,
-  people/swaminathan_gayathri.html, people/taber-thomas_bradley.html, people/tarkowski_leszek.html,
-  people/tarvin_becca.html, people/tatman_rachael.html, people/teal_t.html, people/teucher_andrew.html,
-  people/thomas_adam.html, people/thomson_samuel.html, people/till_robert.html, people/timbers_tiffany.html,
-  people/tomlinson_christopher.html, people/tomsett_richard.html, people/trimble_will.html,
-  people/turek_daniel.html, people/turner_s.html, people/tweedie_fiona.html, people/ushizima_daniela.html,
-  people/vahtras_olav.html, people/vaidyanathan_ramnath.html, people/valls-guimera_roman.html,
-  people/van-der-walt_anelda.html, people/vanichkina_darya.html, people/varga_vicky.html,
+  people/stevens_sarah.html, people/stillwell_mark.html, people/stimberg_marcel.html,
+  people/strootman_jonathan.html, people/sumner_mike.html, people/sundaram_arvind.html,
+  people/supp_s.html, people/svaksha.html, people/swaminathan_gayathri.html, people/taber-thomas_bradley.html,
+  people/tarkowski_leszek.html, people/tarvin_becca.html, people/tatman_rachael.html,
+  people/teal_t.html, people/teucher_andrew.html, people/thomas_adam.html, people/thomson_samuel.html,
+  people/till_robert.html, people/timbers_tiffany.html, people/tomlinson_christopher.html,
+  people/tomsett_richard.html, people/trimble_will.html, people/turek_daniel.html,
+  people/turner_s.html, people/tweedie_fiona.html, people/ushizima_daniela.html, people/vahtras_olav.html,
+  people/vaidyanathan_ramnath.html, people/valls-guimera_roman.html, people/van-der-walt_anelda.html,
+  people/van-heusden_peter.html, people/vanichkina_darya.html, people/varga_vicky.html,
   people/vargas_horacio.html, people/varoquaux_n.html, people/vera_b.html, people/viana_a.html,
   people/von-bieberstein_philipp.html, people/vonderlinden_jens.html, people/wake_leanne.html,
   people/walker_andrew.html, people/wallis_mike.html, people/walsh_alistair.html,
@@ -113,8 +117,9 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/wilber_mark.html, people/wilkerson_chandler.html, people/williams_jason.html,
   people/williams_l.html, people/williams_ryan.html, people/wilson_g.html, people/wilson_p.html,
   people/winston_donald.html, people/winton_jared.html, people/woo_kara.html, people/woods_c.html,
-  people/wright_thomas.html, people/yang_fan.html, people/yang_hsi-kai.html, people/zakkaroff_constantine.html,
-  people/zhang_qp.html, people/zimmerman_naupaka.html, people/zito_t.html, people/zonca_andrea.html]
+  people/wright_thomas.html, people/yang_fan.html, people/yang_hsi-kai.html, people/young_lynn.html,
+  people/zakkaroff_constantine.html, people/zhang_qp.html, people/zimmerman_naupaka.html,
+  people/zito_t.html, people/zonca_andrea.html]
 projects: [projects/active-papers.html, projects/archer.html, projects/astropy.html,
   projects/biostars.html, projects/cyclus.html, projects/ecodata-retriever.html, projects/eff-phys.html,
   projects/gap.html, projects/genomics-virtual-lab.html, projects/ipfs.html, projects/iplant.html,
