Adding Fernando Mayer

--- a/_data/includes.yml
+++ b/_data/includes.yml
@@ -64,8 +64,9 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/maclean_dan.html, people/madin_j.html, people/madison_cindee.html, people/manhaes-savio_alexandre.html,
   people/mansour_tamer.html, people/martinez_paula.html, people/marwaha_kunal.html,
   people/marwick_ben.html, people/mashchenko_sergey.html, people/masoud-ansari_sina.html,
-  people/mcclatchy_sue.html, people/mcdonald_daniel.html, people/mcgough_s.html, people/mcgoveran_catherine.html,
-  people/mckay_sheldon.html, people/mckellar_j.html, people/mckinley_maria.html, people/mclean_cameron.html,
+  people/mayer_fernando.html, people/mcclatchy_sue.html, people/mcdonald_daniel.html,
+  people/mcgough_s.html, people/mcgoveran_catherine.html, people/mckay_sheldon.html,
+  people/mckellar_j.html, people/mckinley_maria.html, people/mclean_cameron.html,
   people/mctavish_ej.html, people/metz_jeremy.html, people/michael_lauren.html, people/michnowicz_s.html,
   people/michonneau_francois.html, people/middleton_ryan.html, people/miles_brian.html,
   people/mills_b.html, people/miotto_amanda.html, people/mistry_meeta.html, people/mitchell_i.html,
