--- a/_data/includes.yml
+++ b/_data/includes.yml
@@ -7,7 +7,7 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/banaszkiewicz_piotr.html, people/barmby_pauline.html, people/barneche_diego.html,
   people/barr_ewan.html, people/bast_radovan.html, people/bauer_dana.html, people/bayer_p.html,
   people/beagrie_robert.html, people/bekolay_trevor.html, people/belcaid_mahdi.html,
-  people/belikov_evgenij.html, people/bennett_n.html, people/berry_michelle.html,
+  people/belikov_evgenij.html, people/bennett_n.html, people/bergman_casey.html, people/berry_michelle.html,
   people/blakk_lukas.html, people/blischak_j.html, people/boettiger_carl.html, people/boissonneault_maxime.html,
   people/bonnie_jessica.html, people/boocock_james.html, people/bostroem_a.html, people/boughton_andrew.html,
   people/boyle_amy.html, people/bray_e.html, people/broman_karl.html, people/brown_amy.html,
@@ -16,8 +16,8 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/canino-koning_r.html, people/cannam_c.html, people/capes_gerard.html, people/caporaso_greg.html,
   people/cartwright_reed.html, people/cerino_t.html, people/chamberlain_s.html, people/chan_cliburn.html,
   people/charbonneau_amanda.html, people/chase_john.html, people/chen_daniel.html,
-  people/chisholm_chelsea.html, people/cholia_s.html, people/chuang-howe_a.html, people/chue-hong_n.html,
-  people/chung_kathy.html, people/clayton_sarah.html, people/clayton_sophie.html,
+  people/chisholm_chelsea.html, people/choi_jin.html, people/cholia_s.html, people/chuang-howe_a.html,
+  people/chue-hong_n.html, people/chung_kathy.html, people/clayton_sarah.html, people/clayton_sophie.html,
   people/code_w.html, people/coelho_luis.html, people/collings_ruth.html, people/collins_arliss.html,
   people/collins_matthew.html, people/cordero_victor.html, people/corless_john.html,
   people/corvellec_marianne.html, people/coudrat_thomas.html, people/cox_grace.html,
@@ -60,13 +60,13 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/lebauer_david.html, people/lee_kate.html, people/lee_kwangchun.html, people/lee_luke.html,
   people/lehtomaki_joona.html, people/levernier_jacob.html, people/leyder_jean-christophe.html,
   people/lightman_matthew.html, people/lin_johnny.html, people/liu_gang.html, people/lonsdale_andrew.html,
-  people/lowe_elijah.html, people/luo_yuxi.html, people/macdonell_cam.html, people/macindoe_gary.html,
-  people/maclean_dan.html, people/madin_j.html, people/madison_cindee.html, people/manhaes-savio_alexandre.html,
-  people/mansour_tamer.html, people/martinez_paula.html, people/marwaha_kunal.html,
-  people/marwick_ben.html, people/mashchenko_sergey.html, people/masoud-ansari_sina.html,
-  people/mayer_fernando.html, people/mcclatchy_sue.html, people/mcdonald_daniel.html,
-  people/mcgough_s.html, people/mcgoveran_catherine.html, people/mckay_sheldon.html,
-  people/mckellar_j.html, people/mckinley_maria.html, people/mclean_cameron.html,
+  people/lowe_elijah.html, people/luo_yuxi.html, people/ma_eric.html, people/macdonell_cam.html,
+  people/macindoe_gary.html, people/maclean_dan.html, people/madin_j.html, people/madison_cindee.html,
+  people/manhaes-savio_alexandre.html, people/mansour_tamer.html, people/martinez_paula.html,
+  people/marwaha_kunal.html, people/marwick_ben.html, people/mashchenko_sergey.html,
+  people/masoud-ansari_sina.html, people/mayer_fernando.html, people/mcclatchy_sue.html,
+  people/mcclung_bill.html, people/mcdonald_daniel.html, people/mcgough_s.html, people/mcgoveran_catherine.html,
+  people/mckay_sheldon.html, people/mckellar_j.html, people/mckinley_maria.html, people/mclean_cameron.html,
   people/mctavish_ej.html, people/metz_jeremy.html, people/michael_lauren.html, people/michnowicz_s.html,
   people/michonneau_francois.html, people/middleton_ryan.html, people/miles_brian.html,
   people/mills_b.html, people/miotto_amanda.html, people/mistry_meeta.html, people/mitchell_i.html,
@@ -107,11 +107,11 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/till_robert.html, people/timbers_tiffany.html, people/tomlinson_christopher.html,
   people/tomsett_richard.html, people/trimble_will.html, people/turek_daniel.html,
   people/turner_s.html, people/tweedie_fiona.html, people/ushizima_daniela.html, people/vahtras_olav.html,
-  people/vaidyanathan_ramnath.html, people/valls-guimera_roman.html, people/van-der-walt_anelda.html,
-  people/van-heusden_peter.html, people/vanichkina_darya.html, people/varga_vicky.html,
-  people/vargas_horacio.html, people/varoquaux_n.html, people/vera_b.html, people/viana_a.html,
-  people/von-bieberstein_philipp.html, people/vonderlinden_jens.html, people/wake_leanne.html,
-  people/walker_andrew.html, people/wallis_mike.html, people/walsh_alistair.html,
+  people/vaidyanathan_ramnath.html, people/valls-guimera_roman.html, people/van-der-helm_edwin.html,
+  people/van-der-walt_anelda.html, people/van-heusden_peter.html, people/vanichkina_darya.html,
+  people/varga_vicky.html, people/vargas_horacio.html, people/varoquaux_n.html, people/vera_b.html,
+  people/viana_a.html, people/von-bieberstein_philipp.html, people/vonderlinden_jens.html,
+  people/wake_leanne.html, people/walker_andrew.html, people/wallis_mike.html, people/walsh_alistair.html,
   people/warren_dan.html, people/wasser_leah.html, people/waugh_b.html, people/weaver_belinda.html,
   people/weinstein_ben.html, people/white_e.html, people/white_easton.html, people/whitefield_shawn.html,
   people/whitehead_tyson.html, people/whitlock_alexander.html, people/wijeratne_asela.html,
