--- a/_data/includes.yml
+++ b/_data/includes.yml
@@ -59,13 +59,14 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/lant_jeremiah.html, people/lasher_c.html, people/latornell_d.html, people/laufersweiler_mark.html,
   people/lebauer_david.html, people/lee_kate.html, people/lee_kwangchun.html, people/lee_luke.html,
   people/lehtomaki_joona.html, people/levernier_jacob.html, people/leyder_jean-christophe.html,
-  people/lightman_matthew.html, people/lin_johnny.html, people/liu_gang.html, people/lonsdale_andrew.html,
-  people/lowe_elijah.html, people/luo_yuxi.html, people/ma_eric.html, people/macdonell_cam.html,
-  people/macindoe_gary.html, people/maclean_dan.html, people/madin_j.html, people/madison_cindee.html,
-  people/manhaes-savio_alexandre.html, people/mansour_tamer.html, people/martinez_paula.html,
-  people/marwaha_kunal.html, people/marwick_ben.html, people/mashchenko_sergey.html,
-  people/masoud-ansari_sina.html, people/mayer_fernando.html, people/mcclatchy_sue.html,
-  people/mcclung_bill.html, people/mcdonald_daniel.html, people/mcgough_s.html, people/mcgoveran_catherine.html,
+  people/liberton_denise.html, people/lightman_matthew.html, people/lin_johnny.html,
+  people/liu_gang.html, people/lonsdale_andrew.html, people/lowe_elijah.html, people/luo_yuxi.html,
+  people/ma_eric.html, people/macdonell_cam.html, people/macindoe_gary.html, people/maclean_dan.html,
+  people/madin_j.html, people/madison_cindee.html, people/manhaes-savio_alexandre.html,
+  people/mansour_tamer.html, people/martinez_paula.html, people/marwaha_kunal.html,
+  people/marwick_ben.html, people/mashchenko_sergey.html, people/masoud-ansari_sina.html,
+  people/mayer_fernando.html, people/mcclatchy_sue.html, people/mcclung_bill.html,
+  people/mcdonald_daniel.html, people/mcgough_s.html, people/mcgoveran_catherine.html,
   people/mckay_sheldon.html, people/mckellar_j.html, people/mckinley_maria.html, people/mclean_cameron.html,
   people/mctavish_ej.html, people/metz_jeremy.html, people/michael_lauren.html, people/michnowicz_s.html,
   people/michonneau_francois.html, people/middleton_ryan.html, people/miles_brian.html,
