--- a/_data/includes.yml
+++ b/_data/includes.yml
@@ -84,7 +84,7 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/pomorski_pawel.html, people/preeyanon_likit.html, people/pritchard_leighton.html,
   people/provencher_francoise.html, people/psomopoulos_fotis.html, people/pue_s.html,
   people/ram_k.html, people/ramalingam_saravanan.html, people/ramos-musalem_ana-karina.html,
-  people/razoumov_alex.html, people/rice_timothy.html, people/richie-halford_adam.html,
+  people/rawat_rohit.html, people/razoumov_alex.html, people/rice_timothy.html, people/richie-halford_adam.html,
   people/riley_janet.html, people/rio_david.html, people/ritchie_scott.html, people/robinson_james.html,
   people/robinson_natalie.html, people/robinson_rosario.html, people/rohl_andrew.html,
   people/rokem_a.html, people/ross_noam.html, people/rowell_bill.html, people/rugis_john.html,
