Ivana Kajic and Anna Williford

--- a/_data/includes.yml
+++ b/_data/includes.yml
@@ -50,9 +50,9 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/huff_k.html, people/imamoglu_fatma.html, people/irving_d.html, people/ivanov_p.html,
   people/jackson_m.html, people/jacobs_christian.html, people/jarecka_dorota.html,
   people/jedrzejewski-szmek_zbigniew.html, people/johnson_ben.html, people/johnston_luke.html,
-  people/jones_dm.html, people/jones_martin.html, people/joyce_blake.html, people/kelly_tom.html,
-  people/kerr_j.html, people/khetani_radhika.html, people/kim_jan.html, people/king_wt.html,
-  people/kiral-kornek_isabell.html, people/kitzes_j.html, people/koch_christina.html,
+  people/jones_dm.html, people/jones_martin.html, people/joyce_blake.html, people/kajic_ivana.html,
+  people/kelly_tom.html, people/kerr_j.html, people/khetani_radhika.html, people/kim_jan.html,
+  people/king_wt.html, people/kiral-kornek_isabell.html, people/kitzes_j.html, people/koch_christina.html,
   people/koenig_steven.html, people/koeppel_alexander.html, people/konrad_b.html,
   people/kuzak_mateusz.html, people/kwakwa_kwasi.html, people/lafleur_olivier.html,
   people/laforest-lapointe_isabelle.html, people/lagesen_k.html, people/lake_sherry.html,
@@ -118,11 +118,11 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/weinstein_ben.html, people/white_e.html, people/white_easton.html, people/whitefield_shawn.html,
   people/whitehead_tyson.html, people/whitlock_alexander.html, people/wijeratne_asela.html,
   people/wilber_mark.html, people/wilkerson_chandler.html, people/williams_jason.html,
-  people/williams_l.html, people/williams_ryan.html, people/wilson_g.html, people/wilson_p.html,
-  people/winston_donald.html, people/winton_jared.html, people/woo_kara.html, people/woods_c.html,
-  people/wright_thomas.html, people/yang_fan.html, people/yang_hsi-kai.html, people/young_lynn.html,
-  people/zakkaroff_constantine.html, people/zhang_qp.html, people/zimmerman_naupaka.html,
-  people/zito_t.html, people/zonca_andrea.html]
+  people/williams_l.html, people/williams_ryan.html, people/williford_anna.html, people/wilson_g.html,
+  people/wilson_p.html, people/winston_donald.html, people/winton_jared.html, people/woo_kara.html,
+  people/woods_c.html, people/wright_thomas.html, people/yang_fan.html, people/yang_hsi-kai.html,
+  people/young_lynn.html, people/zakkaroff_constantine.html, people/zhang_qp.html,
+  people/zimmerman_naupaka.html, people/zito_t.html, people/zonca_andrea.html]
 projects: [projects/active-papers.html, projects/archer.html, projects/astropy.html,
   projects/biostars.html, projects/cyclus.html, projects/ecodata-retriever.html, projects/eff-phys.html,
   projects/gap.html, projects/genomics-virtual-lab.html, projects/ipfs.html, projects/iplant.html,
