--- a/files/2016/02/balance/Makefile
+++ b/files/2016/02/balance/Makefile
@@ -14,13 +14,18 @@ swcarpentry/r-novice-gapminder \
 swcarpentry/matlab-novice-inflammation \
 swcarpentry/make-novice
 
-all : cooked/repo-results.csv cooked/instructor-results.csv
+EMAIL_FILENAMES = $(wildcard raw/discuss-*.html)
 
-cooked/repo-results.csv : raw/repo-data.csv raw/names-genders.csv bin/analyze-repo-data.py
-	python bin/analyze-repo-data.py raw/names-genders.csv < raw/repo-data.csv > cooked/repo-results.csv
+all : cooked/repo-results.csv cooked/instructor-results.csv cooked/email-results.csv
+
+cooked/repo-results.csv : raw/repo-data.csv raw/repo-names-genders.csv bin/analyze-repo-data.py
+	python bin/analyze-repo-data.py raw/repo-names-genders.csv < raw/repo-data.csv > cooked/repo-results.csv
 
 cooked/instructor-results.csv : raw/instructor-data.csv bin/analyze-instructor-data.py
 	python bin/analyze-instructor-data.py < raw/instructor-data.csv > cooked/instructor-results.csv
+
+cooked/email-results.csv : ${EMAIL_FILENAMES} raw/email-names-genders.csv bin/analyze-email-names.py
+	python bin/analyze-email-names.py raw/email-names-genders.csv raw/discuss-*.html > cooked/email-results.csv
 
 raw/repo-data.csv :
 	python bin/get-repo.py ${USERNAME} ${PASSWORD} 2016-01-01 2016-01-31 ${REPOS} > raw/repo-data.csv
