--- a/_data/includes.yml
+++ b/_data/includes.yml
@@ -9,29 +9,29 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/beagrie_robert.html, people/bekolay_trevor.html, people/belcaid_mahdi.html,
   people/belikov_evgenij.html, people/bennett_n.html, people/bergman_casey.html, people/berry_michelle.html,
   people/blakk_lukas.html, people/blischak_j.html, people/boettiger_carl.html, people/boissonneault_maxime.html,
-  people/bonnie_jessica.html, people/boocock_james.html, people/bostroem_a.html, people/boughton_andrew.html,
-  people/boyle_amy.html, people/bray_e.html, people/broman_karl.html, people/brown_amy.html,
-  people/brown_ct.html, people/brown_kyler.html, people/bryan_j.html, people/burns_s.html,
-  people/cabunoc_abigail.html, people/calhoun_patrick.html, people/camins-esakov_jared.html,
-  people/canino-koning_r.html, people/cannam_c.html, people/capes_gerard.html, people/caporaso_greg.html,
-  people/cartwright_reed.html, people/cerino_t.html, people/chamberlain_s.html, people/chan_cliburn.html,
-  people/charbonneau_amanda.html, people/chase_john.html, people/chen_daniel.html,
-  people/chisholm_chelsea.html, people/choi_jin.html, people/cholia_s.html, people/chuang-howe_a.html,
-  people/chue-hong_n.html, people/chung_kathy.html, people/clayton_sarah.html, people/clayton_sophie.html,
-  people/code_w.html, people/coelho_luis.html, people/collings_ruth.html, people/collins_arliss.html,
-  people/collins_matthew.html, people/cordero_victor.html, people/corless_john.html,
-  people/corvellec_marianne.html, people/coudrat_thomas.html, people/cox_grace.html,
-  people/cox_logan.html, people/cozzini_s.html, people/cranston_k.html, people/crouch_nicholas.html,
-  people/crouch_s.html, people/croucher_mike.html, people/crusoe_michael.html, people/daigle_remi.html,
-  people/dale_ryan.html, people/dashnow_harriet.html, people/davenport_e.html, people/davey_rob.html,
-  people/davis_m.html, people/davis_neal.html, people/demichelis_raffaella.html, people/derrick_james.html,
-  people/desjardins_james.html, people/devenyi_gabriel.html, people/devlin_catherine.html,
-  people/dickenson_matt.html, people/dickson_r.html, people/dolson_emily.html, people/dotson_david.html,
-  people/doyle_kimberly.html, people/duchesne_laurent.html, people/duckles_jonah.html,
-  people/duffy_meghan.html, people/duncan_susan.html, people/eddelbuettel_dirk.html,
-  people/ely_j.html, people/emonet_remi.html, people/erlich_aaron.html, people/evans_andy.html,
-  people/falster_daniel.html, people/farsarakis_emmanouil.html, people/fei_xu.html,
-  people/ferguson_angus.html, people/fernandes_filipe.html, people/figueira_l.html,
+  people/bonnie_jessica.html, people/bonsma_madeleine.html, people/boocock_james.html,
+  people/bostroem_a.html, people/boughton_andrew.html, people/boyle_amy.html, people/bray_e.html,
+  people/broman_karl.html, people/brown_amy.html, people/brown_ct.html, people/brown_kyler.html,
+  people/bryan_j.html, people/burns_s.html, people/cabunoc_abigail.html, people/calhoun_patrick.html,
+  people/camins-esakov_jared.html, people/canino-koning_r.html, people/cannam_c.html,
+  people/capes_gerard.html, people/caporaso_greg.html, people/cartwright_reed.html,
+  people/cerino_t.html, people/chamberlain_s.html, people/chan_cliburn.html, people/charbonneau_amanda.html,
+  people/chase_john.html, people/chen_daniel.html, people/chisholm_chelsea.html, people/choi_jin.html,
+  people/cholia_s.html, people/chuang-howe_a.html, people/chue-hong_n.html, people/chung_kathy.html,
+  people/clayton_sarah.html, people/clayton_sophie.html, people/code_w.html, people/coelho_luis.html,
+  people/collings_ruth.html, people/collins_arliss.html, people/collins_matthew.html,
+  people/cordero_victor.html, people/corless_john.html, people/corvellec_marianne.html,
+  people/coudrat_thomas.html, people/cox_grace.html, people/cox_logan.html, people/cozzini_s.html,
+  people/cranston_k.html, people/crouch_nicholas.html, people/crouch_s.html, people/croucher_mike.html,
+  people/crusoe_michael.html, people/daigle_remi.html, people/dale_ryan.html, people/dashnow_harriet.html,
+  people/davenport_e.html, people/davey_rob.html, people/davis_m.html, people/davis_neal.html,
+  people/demichelis_raffaella.html, people/derrick_james.html, people/desjardins_james.html,
+  people/devenyi_gabriel.html, people/devlin_catherine.html, people/dickenson_matt.html,
+  people/dickson_r.html, people/dolson_emily.html, people/dotson_david.html, people/doyle_kimberly.html,
+  people/duchesne_laurent.html, people/duckles_jonah.html, people/duffy_meghan.html,
+  people/duncan_susan.html, people/eddelbuettel_dirk.html, people/ely_j.html, people/emonet_remi.html,
+  people/erlich_aaron.html, people/evans_andy.html, people/falster_daniel.html, people/farsarakis_emmanouil.html,
+  people/fei_xu.html, people/ferguson_angus.html, people/fernandes_filipe.html, people/figueira_l.html,
   people/fitzjohn_rich.html, people/fonnesbeck_chris.html, people/fontenelle_hugues.html,
   people/forstner_konrad.html, people/fournier_auriel.html, people/fowler_philip.html,
   people/friedline_chris.html, people/fu_zhuo.html, people/gan_emilia.html, people/garcia-algarra_javier.html,
@@ -74,7 +74,7 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/mokhtarzadeh_hamid.html, people/moore_jason.html, people/morris_b.html, people/mudrak_erika.html,
   people/munoz_ian.html, people/nagraj_vp.html, people/nahum_josh.html, people/nakhoul_hani.html,
   people/navarro_francisco.html, people/nederbragt_l.html, people/nenadic_aleksandra.html,
-  people/nielsen_daiva.html, people/nielsen_jens.html, people/nilsson_matthias.html,
+  people/neufeld_ryan.html, people/nielsen_daiva.html, people/nielsen_jens.html, people/nilsson_matthias.html,
   people/nunez-iglesias_juan.html, people/ocais_alan.html, people/oleary_aaron.html,
   people/olson_r.html, people/orendt_anita.html, people/ory_j.html, people/palamartchouk_kirill.html,
   people/palm_francisco.html, people/paulo_martin.html, people/pawlik_a.html, people/pearson_john.html,
@@ -96,32 +96,34 @@ people: [people/adams_james.html, people/adelman_joshua.html, people/ahmadia_a.h
   people/sherman_jason.html, people/shih_yu-ching.html, people/silva_raniere.html,
   people/simpkin_sarah.html, people/simpson_jack.html, people/simpson_john.html, people/slaybaugh_rachel.html,
   people/sloggett_clare.html, people/small_luc.html, people/smith_byron.html, people/smith_daniel.html,
-  people/smith_j.html, people/smorul_mike.html, people/soderberg_courtney.html, people/soontiens_nancy.html,
-  people/speer_donald.html, people/srinath_ashwin.html, people/srinivasan_karthik.html,
-  people/st-onge_pier-luc.html, people/stacy_mark.html, people/standage_daniel.html,
-  people/stanton-cook_mitchell.html, people/staton_margaret.html, people/steinbach_peter.html,
-  people/stevens_sarah.html, people/stillwell_mark.html, people/stimberg_marcel.html,
-  people/strootman_jonathan.html, people/sumner_mike.html, people/sundaram_arvind.html,
-  people/supp_s.html, people/svaksha.html, people/swaminathan_gayathri.html, people/taber-thomas_bradley.html,
-  people/tarkowski_leszek.html, people/tarvin_becca.html, people/tatman_rachael.html,
-  people/teal_t.html, people/telenczuk_bartosz.html, people/teucher_andrew.html, people/thomas_adam.html,
+  people/smith_j.html, people/smorul_mike.html, people/soares-siqueira_abel.html,
+  people/soderberg_courtney.html, people/soontiens_nancy.html, people/speer_donald.html,
+  people/srinath_ashwin.html, people/srinivasan_karthik.html, people/st-onge_pier-luc.html,
+  people/stacy_mark.html, people/standage_daniel.html, people/stanton-cook_mitchell.html,
+  people/staton_margaret.html, people/steinbach_peter.html, people/stevens_sarah.html,
+  people/stillwell_mark.html, people/stimberg_marcel.html, people/strootman_jonathan.html,
+  people/sumner_mike.html, people/sundaram_arvind.html, people/supp_s.html, people/svaksha.html,
+  people/swaminathan_gayathri.html, people/taber-thomas_bradley.html, people/tarkowski_leszek.html,
+  people/tarvin_becca.html, people/tatman_rachael.html, people/teal_t.html, people/telenczuk_bartosz.html,
+  people/telenczuk_maria.html, people/teucher_andrew.html, people/thomas_adam.html,
   people/thomson_samuel.html, people/till_robert.html, people/timbers_tiffany.html,
-  people/tomlinson_christopher.html, people/tomsett_richard.html, people/trimble_will.html,
-  people/turek_daniel.html, people/turner_s.html, people/tweedie_fiona.html, people/ushizima_daniela.html,
-  people/vahtras_olav.html, people/vaidyanathan_ramnath.html, people/valls-guimera_roman.html,
-  people/van-der-helm_edwin.html, people/van-der-walt_anelda.html, people/van-heusden_peter.html,
-  people/vanichkina_darya.html, people/varga_vicky.html, people/vargas_horacio.html,
-  people/varoquaux_n.html, people/vera_b.html, people/viana_a.html, people/vilbig_kevin.html,
-  people/von-bieberstein_philipp.html, people/vonderlinden_jens.html, people/wake_leanne.html,
-  people/walker_andrew.html, people/wallis_mike.html, people/walsh_alistair.html,
-  people/warren_dan.html, people/wasser_leah.html, people/waugh_b.html, people/weaver_belinda.html,
-  people/weinstein_ben.html, people/white_e.html, people/white_easton.html, people/whitefield_shawn.html,
-  people/whitehead_tyson.html, people/whitlock_alexander.html, people/wijeratne_asela.html,
-  people/wilber_mark.html, people/wilkerson_chandler.html, people/williams_jason.html,
-  people/williams_l.html, people/williams_ryan.html, people/williford_anna.html, people/wilson_g.html,
-  people/wilson_p.html, people/winston_donald.html, people/winton_jared.html, people/woo_kara.html,
-  people/woods_c.html, people/wright_thomas.html, people/yang_fan.html, people/yang_hsi-kai.html,
-  people/young_lynn.html, people/zakkaroff_constantine.html, people/zhang_qp.html,
+  people/tomlinson_christopher.html, people/tomsett_richard.html, people/tran_lina.html,
+  people/trimble_will.html, people/turek_daniel.html, people/turner_s.html, people/tweedie_fiona.html,
+  people/ugalde_juan.html, people/ushizima_daniela.html, people/vahtras_olav.html,
+  people/vaidyanathan_ramnath.html, people/valls-guimera_roman.html, people/van-der-helm_edwin.html,
+  people/van-der-walt_anelda.html, people/van-heusden_peter.html, people/vanichkina_darya.html,
+  people/varga_vicky.html, people/vargas_horacio.html, people/varoquaux_n.html, people/vera_b.html,
+  people/viana_a.html, people/vilbig_kevin.html, people/von-bieberstein_philipp.html,
+  people/vonderlinden_jens.html, people/wake_leanne.html, people/walker_andrew.html,
+  people/wallis_mike.html, people/walsh_alistair.html, people/warren_dan.html, people/wasser_leah.html,
+  people/waterfall_josh.html, people/waugh_b.html, people/weaver_belinda.html, people/weinstein_ben.html,
+  people/white_e.html, people/white_easton.html, people/whitefield_shawn.html, people/whitehead_tyson.html,
+  people/whitlock_alexander.html, people/wijeratne_asela.html, people/wilber_mark.html,
+  people/wilkerson_chandler.html, people/williams_jason.html, people/williams_l.html,
+  people/williams_ryan.html, people/williford_anna.html, people/wilson_g.html, people/wilson_p.html,
+  people/winston_donald.html, people/winton_jared.html, people/woo_kara.html, people/woods_c.html,
+  people/wright_thomas.html, people/yang_fan.html, people/yang_hsi-kai.html, people/young_lynn.html,
+  people/zakkaroff_constantine.html, people/zhang_jingchao.html, people/zhang_qp.html,
   people/zimmerman_naupaka.html, people/zito_t.html, people/zonca_andrea.html]
 projects: [projects/active-papers.html, projects/archer.html, projects/astropy.html,
   projects/biostars.html, projects/cyclus.html, projects/ecodata-retriever.html, projects/eff-phys.html,
